2D Filter causes mouselook script drifting effect #34517

Closed
opened 2013-03-03 20:54:36 +01:00 by Riyuzakisan · 6 comments

%%%--- Operating System, Graphics card ---
Windows 7 64-bit; nVidia GeForce GTS 450

- Blender version with error, and version that worked ---

Version with error: Blender 2.66 r54697
Version that worked: Blender 2.65x (up until 2.66)

- Short description of error ---

Blender Game Engine:
Using any mouselook script that gets the mouse position, either from logic.mouse.position (Python) or from a Mouse Movement sensor, returns incorrect mouse position values while a 2D Filter (both built-in and custom glsl) is applied. This causes a "drifting" effect on the orientation of object that the script controls.

- Steps for others to reproduce the error (preferably based on attached .blend file) ---

Use any mouselook script (such as: mouselook script from tutorialsforblender3d.com, which is used in the included .blend), and set up a 2D Filter logic brick (the built-in Blur filter is used in the attached .blend). In the game engine, after the 2D filter is applied, move the mouse slightly, and the camera should begin to spin uncontrollably.%%%

%%%--- Operating System, Graphics card --- Windows 7 64-bit; nVidia GeForce GTS 450 - Blender version with error, and version that worked --- Version with error: Blender 2.66 r54697 Version that worked: Blender 2.65x (up until 2.66) - Short description of error --- Blender Game Engine: Using any mouselook script that gets the mouse position, either from logic.mouse.position (Python) or from a Mouse Movement sensor, returns incorrect mouse position values while a 2D Filter (both built-in and custom glsl) is applied. This causes a "drifting" effect on the orientation of object that the script controls. - Steps for others to reproduce the error (preferably based on attached .blend file) --- Use any mouselook script (such as: mouselook script from tutorialsforblender3d.com, which is used in the included .blend), and set up a 2D Filter logic brick (the built-in Blur filter is used in the attached .blend). In the game engine, after the 2D filter is applied, move the mouse slightly, and the camera should begin to spin uncontrollably.%%%
Author

Changed status to: 'Open'

Changed status to: 'Open'

%%%confirmed with my script files too. I'm trying to find the revision it started not to work%%%

%%%confirmed with my script files too. I'm trying to find the revision it started not to work%%%

%%%also this bug is only in Blender, not in Blenderplayer%%%

%%%also this bug is only in Blender, not in Blenderplayer%%%

%%%Moved from Blender 2.6 Bug Tracker to Game Engine%%%

%%%Moved from Blender 2.6 Bug Tracker to Game Engine%%%

%%%but fixed on rev. 55011 (patch by Daniel Stokes - Kupoman)
Thanks for reporting, right in time for 2.66a ;)%%%

%%%but fixed on rev. 55011 (patch by Daniel Stokes - Kupoman) Thanks for reporting, right in time for 2.66a ;)%%%

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
2 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#34517
No description provided.