source/gameengine/Rasterizer/RAS_2DFilterManager.cpp
@@ -468,7 +468,8 @@ void RAS_2DFilterManager::RenderFilters(RAS_ICanvas* canvas)
 	}
 
 	glEnable(GL_DEPTH_TEST);
-	canvas->SetViewPort(viewport[0],viewport[1],viewport[2],viewport[3]);
+	//We can't pass the results of canvas->GetViewPort() directly because canvas->SetViewPort() does some extra math [#34517]
+	canvas->SetViewPort(0, 0, viewport[2]-1, viewport[3]-1);
 	EndShaderProgram();
 	glPopMatrix();
 	glMatrixMode(GL_MODELVIEW);
